--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "nextn",
   "version": "0.1.0",
@@ -45,11 +44,11 @@
     "firebase": "^11.7.0",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
+    "next": "^15.3.2",
     "patch-package": "^8.0.0",
-    "react": "^18.3.1",
+    "react": "^19.1.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
@@ -68,5 +67,3 @@
     "typescript": "^5"
   }
 }
-
-    
